--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <meta
+      name="viewport"
+      content="minimum-scale=1, initial-scale=1, width=device-width"  
+    />
+    <title>Painel de Controle - Quiz UTFPR</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
