:lipstick: Alterando index.html

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Painel de Controle para criação de quizzes - UTFPR"
+      content="Painel de Controle para cria&ccedil;&atilde;o de quizzes - UTFPR"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
