--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,7 +13,11 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet">
+
     <meta
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"  
